test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/01-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app: kyverno
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/name: kyverno
  name: kyverno:generate-events
rules:
- apiGroups:
  - ''
  - events.k8s.io
  resources:
  - events
  verbs:
  - create
  - get
  - update
  - delete
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno:generate-events
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kyverno:generate-events
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
- kind: ServiceAccount
  name: kyverno-admission-controller
  namespace: kyverno
