test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/04-configmap_edit_1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: generate-event-on-edit-configmap
  namespace: generate-event-on-edit-ns
data:
  food: cheese
  day: wednesday
  color: red
