test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/06-configmap_edit_2.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: generate-event-on-edit-configmap
  namespace: generate-event-on-edit-ns
data:
  food: cheese
  day: friday
  color: red
