test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-step-01-apply-1-2.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno:generate-events
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kyverno:generate-events
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
- kind: ServiceAccount
  name: kyverno-admission-controller
  namespace: kyverno
