test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-step-03-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: generate-event-on-edit-ns
