test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-step-03-apply-1-2.yaml
apiVersion: v1
data:
  color: red
  day: monday
  food: cheese
kind: ConfigMap
metadata:
  name: generate-event-on-edit-configmap
  namespace: generate-event-on-edit-ns
