test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-step-04-apply-1-1.yaml
apiVersion: v1
data:
  color: red
  day: wednesday
  food: cheese
kind: ConfigMap
metadata:
  name: generate-event-on-edit-configmap
  namespace: generate-event-on-edit-ns
