test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-event-upon-edit
spec:
  background: false
  rules:
  - generate:
      apiVersion: v1
      data:
        firstTimestamp: '{{ time_now_utc() }}'
        involvedObject:
          apiVersion: v1
          kind: ConfigMap
          name: '{{ request.name }}'
          namespace: '{{ request.namespace }}'
          uid: '{{request.object.metadata.uid}}'
        lastTimestamp: '{{ time_now_utc() }}'
        message: This resource was updated by {{ request.userInfo | to_string(@) }}
        reason: Edit
        source:
          component: kyverno
        type: Warning
      kind: Event
      name: edit.{{ random('[a-z0-9]{12}') }}
      namespace: '{{request.object.metadata.namespace}}'
      synchronize: false
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: generate-event-on-edit
    preconditions:
      any:
      - key: '{{ request.operation }}'
        operator: Equals
        value: UPDATE
