test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-step-02-assert-1-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-event-upon-edit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
