test/conformance/chainsaw/generate/clusterpolicy/cornercases/generate-event-upon-edit/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-event-upon-edit
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - try:
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-event-upon-edit
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
    - apply:
        file: chainsaw-step-03-apply-1-2.yaml
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
  - name: step-05
    try:
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
  - name: step-06
    try:
    - apply:
        file: chainsaw-step-06-apply-1-1.yaml
  - name: step-07
    try:
    - assert:
        file: chainsaw-step-07-assert-1-1.yaml
    - assert:
        file: chainsaw-step-07-assert-1-2.yaml
